--- a/deploy/45_apischeme-webhook.yaml.ValidatingWebhookConfiguration.yaml
+++ b/deploy/45_apischeme-webhook.yaml.ValidatingWebhookConfiguration.yaml
@@ -3,7 +3,7 @@
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: apischemevalidators.admission.managed.openshfit.io
+  name: apischemevalidators.admission.managed.openshift.io
   annotations:
     service.alpha.openshift.io/inject-cabundle: "true"
 webhooks:
@@ -20,7 +20,7 @@ webhooks:
   rules:
   - operations:
     - DELETE
-    # NOTE some existing validatiors use "" as apigroup and * for versions, meaning it would affect all
+    # NOTE some existing validators use "" as apigroup and * for versions, meaning it would affect all
     #      we might consider doing that here to ensure new versions are covered?
     apiGroups:
     - cloudingress.managed.openshift.io
