--- a/deploy/40_validating-webhook-Service.yaml
+++ b/deploy/40_validating-webhook-Service.yaml
@@ -3,8 +3,8 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
+    service.beta.openshift.io/inject-cabundle: "true"
     service.beta.openshift.io/serving-cert-secret-name: webhook-certs
-  creationTimestamp: null
   labels:
     name: cloud-ingress-operator-webhook
   name: cloud-ingress-operator-webhook
