--- a/deploy/45_sshd-webhook.yaml.ValidatingWebhookConfiguration.yaml
+++ b/deploy/45_sshd-webhook.yaml.ValidatingWebhookConfiguration.yaml
@@ -2,17 +2,18 @@
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: sshdvalidators.admission.hive.openshift.io
+  name: sshdvalidators.admission.managed.openshift.io
+  annotations:
+    service.beta.openshift.io/inject-cabundle: "true"
 webhooks:
-- name: sshdvalidators.admission.hive.openshift.io
+- name: sshdvalidators.admission.managed.openshift.io
   admissionReviewVersions:
   - v1beta1
   clientConfig:
     service:
-      # reach the webhook via the registered aggregated API
       namespace: openshift-cloud-ingress-operator
-      name: cloud-ingress-operator-validating-webhooks
-      path: TODO
+      name: cloud-ingress-operator-webhook
+      path: /apis/admission.managed.openshift.io/v1/sshdvalidators
   rules:
   - operations:
     - DELETE
