--- a/deploy/45_sshd-webhook.yaml.ValidatingWebhookConfiguration.yaml
+++ b/deploy/45_sshd-webhook.yaml.ValidatingWebhookConfiguration.yaml
@@ -2,25 +2,25 @@
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: sshdvalidators.admission.managed.openshift.io
+  name: sshdvalidators.cloudingress.managed.openshift.io
   annotations:
     service.beta.openshift.io/inject-cabundle: "true"
 webhooks:
-- name: sshdvalidators.admission.managed.openshift.io
+- name: sshdvalidators.cloudingress.managed.openshift.io
   admissionReviewVersions:
   - v1beta1
   clientConfig:
     service:
       namespace: openshift-cloud-ingress-operator
       name: cloud-ingress-operator-webhook
-      path: /apis/admission.managed.openshift.io/v1/sshdvalidators
+      path: /validating-webhooks
   rules:
   - operations:
     - DELETE
     # NOTE some existing validators use "" as apigroup and * for versions, meaning it would affect all
     #      we might consider doing that here to ensure new versions are covered?
     apiGroups:
-    - managed.openshift.io
+    - cloudingress.managed.openshift.io
     apiVersions:
     - v1
     resources:
