--- a/deploy/45_apischeme-webhook.yaml.ValidatingWebhookConfiguration.yaml
+++ b/deploy/45_apischeme-webhook.yaml.ValidatingWebhookConfiguration.yaml
@@ -1,5 +1,4 @@
 ---
-# More examples https://github.com/openshift/managed-cluster-validating-webhooks/blob/master/build/selectorsyncset.yaml
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
@@ -9,22 +8,21 @@ metadata:
 webhooks:
 - name: apischemevalidators.cloudingress.managed.openshift.io
   admissionReviewVersions:
-  - v1beta1
+  - v1
   clientConfig:
     service:
       namespace: openshift-cloud-ingress-operator
       name: cloud-ingress-operator-webhook
-      path: /apis/apiregistration.k8s.io/v1/apiservices/apischemevalidators.cloudingress.managed.openshift.io/
+      path: /validating-webhooks
   rules:
   - operations:
     - DELETE
-    # NOTE some existing validators use "" as apigroup and * for versions, meaning it would affect all
-    #      we might consider doing that here to ensure new versions are covered?
     apiGroups:
     - cloudingress.managed.openshift.io
     apiVersions:
     - v1alpha1
     resources:
     - apischemes
+    scope: "Namespaced"
   failurePolicy: Fail
   sideEffects: None
